--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,7 +68,8 @@
     },
     "webpack-dev-server": "^5.2.2",
     "form-data": "^4.0.4",
-    "js-yaml": "^4.1.1"
+    "js-yaml": "^4.1.1",
+    "glob": "^13.0.0"
   },
   "resolutions": {
     "path-to-regexp": "^1.8.0",
