--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,7 +69,8 @@
     "webpack-dev-server": "^5.2.2",
     "form-data": "^4.0.4",
     "js-yaml": "^4.1.1",
-    "glob": "^13.0.0"
+    "glob": "^13.0.0",
+    "node-forge": "^1.3.2"
   },
   "resolutions": {
     "path-to-regexp": "^1.8.0",
