--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,7 +70,8 @@
     "form-data": "^4.0.4",
     "js-yaml": "^4.1.1",
     "glob": "^13.0.0",
-    "node-forge": "^1.3.2"
+    "node-forge": "^1.3.2",
+    "lodash": "^4.17.23"
   },
   "resolutions": {
     "path-to-regexp": "^1.8.0",
