--- a/frontend/package.json
+++ b/frontend/package.json
@@ -71,7 +71,8 @@
     "js-yaml": "^4.1.1",
     "glob": "^13.0.0",
     "node-forge": "^1.3.2",
-    "lodash": "^4.17.23"
+    "lodash": "^4.17.23",
+    "lodash-es": "^4.17.23"
   },
   "resolutions": {
     "path-to-regexp": "^1.8.0",
