--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,19 +60,20 @@
     "http-proxy-middleware": "^2.0.7",
     "serialize-javascript": "^6.0.2",
     "rollup-plugin-terser": "^4.0.4",
-    "workbox-build": "^7.0.0",
     "workbox-webpack-plugin": "^7.0.0",
     "@babel/runtime": "^7.26.10",
     "@carbon/react": {
       "react-is": "^18.3.1"
     },
-    "webpack-dev-server": "^5.2.2",
     "form-data": "^4.0.4",
     "js-yaml": "^4.1.1",
     "glob": "^13.0.0",
     "node-forge": "^1.3.2",
     "lodash": "^4.17.23",
-    "lodash-es": "^4.17.23"
+    "lodash-es": "^4.17.23",
+    "webpack-dev-server": "^5.2.2",
+    "workbox-build": "^7.0.0",
+    "eslint": "9.30.0"
   },
   "resolutions": {
     "path-to-regexp": "^1.8.0",
@@ -82,6 +83,7 @@
     "@babel/preset-env": "^7.24.3",
     "@babel/preset-react": "^7.24.1",
     "@testing-library/react": "^14.2.2",
+    "ajv": "^8.17.1",
     "babel-jest": "^29.7.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
