--- a/frontend/package.json
+++ b/frontend/package.json
@@ -74,11 +74,23 @@
     "webpack-dev-server": "^5.2.2",
     "workbox-build": "^7.0.0",
     "eslint": "^9.30.0",
-    "qs": "^6.14.2"
+    "qs": "^6.14.2",
+    "bfj": "^9.1.3",
+    "minimatch": "^10.2.1",
+    "ajv": "^8.18.0",
+    "ajv-keywords": "^5.1.0",
+    "babel-loader": "^9.2.1",
+    "schema-utils": "^4.3.3",
+    "fork-ts-checker-webpack-plugin": "^9.1.0"
   },
   "resolutions": {
     "path-to-regexp": "^1.8.0",
-    "@babel/runtime": "^7.26.10"
+    "@babel/runtime": "^7.26.10",
+    "ajv": "^8.18.0",
+    "ajv-keywords": "^5.1.0",
+    "babel-loader": "^9.2.1",
+    "schema-utils": "^4.3.3",
+    "fork-ts-checker-webpack-plugin": "^9.1.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.3",
